# magical-search

./: .gitignore  .rustfmt.toml  Cargo.toml  build.rs
src/: card.rs  card_detail.rs  card_grid.rs  cards.rs  database.rs  main.rs  to_sql.rs  types.rs  update_database.rs
src/card/: art_series.rs  card_data.rs  loading.rs  mod.rs  no_image.rs  normal.rs
src/database/: get_card_face.sql  get_card_info.sql  get_ids_with_clauses.sql  mod.rs  to_sql.rs  write_card_face_image.sql  write_card_image.sql
src/db/: add_card.sql  add_card_color_identity.sql  add_card_colors.sql  add_card_face.sql  add_card_face_colors.sql  add_card_face_image_uris.sql  add_card_image_uris.sql  add_card_keywords.sql  create_tables.sql  get_card.sql  get_card_face.sql  get_cards.sql  get_cards_name_like.sql  mod.rs  write_face_small_blob.sql  write_large_image_blob.sql  write_small_image_blob.sql
src/search/: mod.rs  to_search_string.rs  ui.rs
src/search/parser/: and.rs  color.rs  color_identity_query.rs  color_query.rs  comparison_operator.rs  keyword.rs  mod.rs  name.rs  or.rs  oracle_query.rs  parens.rs  parsed_search.rs  power_query.rs  search_keyword.rs  type_line_query.rs
src/update_database/: main.rs  types.rs
