[package]
name = "magical-search"
version = "0.1.0"
edition = "2021"

[build]
rustc = "build.rs"

[dependencies]
anyhow = "1.0.79"
gtk = "0.18.1"
gdk-pixbuf = "0.18.1"
thiserror = "1.0.57"
rusqlite = "0.31.0"
reqwest = { version = "0.11.24", features = ["blocking"] }

[build-dependencies]
tokio = {version = "1.36.0", features = ["full"]}
reqwest = { version = "0.11.24", features = ["blocking"] }
anyhow = "1.0.79"
thiserror = "1.0.57"
rusqlite = "0.31.0"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
itertools = "0.12.1"
bytes = "1.5.0"