[package]
name = "magical-search"
version = "0.1.0"
edition = "2021"

[package.metadata.update-database]
path = "src/update-database/main.rs" 

[[bin]]
name = "update-database"
path = "src/update_database/main.rs"

[dependencies]
anyhow = "1.0.79"
gtk = "0.18.1"
gdk-pixbuf = "0.18.1"
thiserror = "1.0.57"
rusqlite = "0.31.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
tokio = {version = "1.36.0", features = ["full"]}
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
itertools = "0.12.1"
bytes = "1.5.0"