[package]
name = "magical-search"
version = "0.1.0"
edition = "2021"

[package.metadata.update-database]
path = "src/update-database/main.rs" 

[[bin]]
name = "update-database"
path = "src/update_database.rs"

[dependencies]
anyhow = "1.0.79"
gdk-pixbuf = "0.18.1"
thiserror = "1.0.57"
reqwest = { version = "0.11.24", features = ["blocking"] }
tokio = {version = "1.36.0", features = ["full"]}
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
itertools = "0.12.1"
bytes = "1.5.0"
iced = {version = "0.12.1", features = ["image", "debug", "tokio"]}
once_cell = "1.19.0"
async-std = "1.12.0"
tracing-subscriber = "0.3.18"
directories-next = "2.0.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }
tokio-rusqlite = "0.5.0"
rusqlite = "0.30.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
